--- a/style.css
+++ b/style.css
@@ -96,6 +96,8 @@ h1 {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-bottom: 60px;
+    height: 100vh;
 }
 
 #form-bg {
@@ -103,7 +105,7 @@ h1 {
     align-self: center;
     justify-self: center;
     font-size: 1.2em;
-    margin-top: 50px;
+    /* margin-top: 50px; */
     padding: 50px;
     width: 75vw;
     border-radius: 10px;
@@ -128,6 +130,7 @@ form {
     align-items: center;
     justify-content: center;
     width: inherit;
+    height: 80vh;
     padding: 10px 0px;
     background-color: rgba(0, 0, 0, 0.6);
     border-radius: 10px;
@@ -135,6 +138,16 @@ form {
     animation-duration: 1.5s;
     animation-timing-function: ease-in;
     animation-iteration-count: initial;
+}
+
+.reasons {
+    background-color: rgba(35, 66, 3, 0.637);
+    color: cornsilk;
+    border: 3px solid cornsilk;
+    border-radius: 5px;
+    padding: 4px 4px;
+    margin: 5px 0px;
+    width: 40%;
 }
 
 .message {
@@ -159,10 +172,12 @@ form {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 60px;
 }
 .title-container {
     background: linear-gradient(90deg, rgba(0, 0, 0, 0.1) 0%, rgba(255, 255, 255, 0.5) 10% , rgba(128, 128, 128, 0.5) 90% , rgba(0, 0, 0, 0.1) 100%);
-    margin: 25px;
+    margin: 30px;
+    padding: 10px 20px;
     border-radius: 20px;
 }
 
@@ -211,7 +226,11 @@ form {
     margin: 10px;
     justify-self: center;
     border: 2px solid black;
-    
+    transition: 1s; 
+}
+
+.project-image:hover {
+    transform: scale(1.1);
 }
 
 
