--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
     width: 100%;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 1em;
-    background: linear-gradient(90deg, rgba(12, 11, 11, 0.8), rgba(4, 126, 4, 0.8));
+    background: linear-gradient(90deg, rgba(12, 11, 11), rgba(4, 126, 4));
     align-content: center;
 }
 
@@ -28,7 +28,7 @@ body {
     display: flex;
     height: 90vh;
     width: 75vw;
-    background: linear-gradient(-90deg, rgba(255,255,255, 0.15), rgba(0,200,0, 0.15));
+    background: linear-gradient(-90deg, rgba(46, 53, 46, 0.5), rgba(1, 122, 1, 0.5));
     border-radius: 50px;
     align-items: center;
     justify-content: center;
@@ -44,8 +44,9 @@ h1 {
 .Name {
     margin: 5px;
     font-size: 2em;
-    background: linear-gradient(90deg, rgb(2, 70, 13), rgb(17, 12, 12));
+    background: linear-gradient(90deg, rgb(3, 114, 21), rgb(17, 12, 12));
     -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
     animation-name: slide;
     animation-duration: 1.5s;
@@ -62,14 +63,19 @@ h1 {
     justify-content: center;
 }
 .profile_header {
+    display: grid;
+    grid-template-columns: auto auto auto;
     margin: 25px 10px;
-    background-color: rgba(0, 12, 0, 0.3);
-    border-radius: 20px;
+    animation-name: slide;
+    animation-duration: 1.5s;
+    animation-timing-function: ease-in;
+    animation-iteration-count: initial;
 }
 .profile_pic {
     height: 200px;
     width: 300px;
     margin: 20px;
+    border-radius: 200px;
     animation-name: slide;
     animation-duration: 1.5s;
     animation-timing-function: ease-in;
@@ -162,8 +168,18 @@ form {
 
 .submit {
     width: 75px;
-    height: 40px;
+    height: 60px;
+    background-color: rgba(53, 100, 5, 0.637);
+    color: blanchedalmond;
+    border: 3px solid white;
     border-radius: 40px;
+    transition: 0.5s;
+}
+.submit:hover {
+    cursor: pointer;
+    border-color: black;
+    transform: scale(1.1, 1.1);
+    background-color: rgba(64, 124, 4, 0.637);
 }
 
 /* Projetcs Page*/
@@ -175,7 +191,7 @@ form {
     margin-bottom: 60px;
 }
 .title-container {
-    background: linear-gradient(90deg, rgba(0, 0, 0, 0.1) 0%, rgba(255, 255, 255, 0.5) 10% , rgba(128, 128, 128, 0.5) 90% , rgba(0, 0, 0, 0.1) 100%);
+    font-size: 2em;
     margin: 30px;
     padding: 10px 20px;
     border-radius: 20px;
@@ -186,7 +202,10 @@ form {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: linear-gradient(-90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.5) 10% , rgba(128, 128, 128, 0.5) 90% , rgba(128, 128, 128, 0.1) 100%);
+    background: 
+    linear-gradient(-90deg, rgba(255, 255, 255, 0.05) 0%, rgba(255, 255, 255, 0.3) 10% , rgba(128, 128, 128, 0.3) 90% , rgba(128, 128, 128, 0.05) 100%),
+    linear-gradient(0deg, rgba(0, 0, 0, 0.05) 0%, rgba(0, 0, 0, 0.3) 10% , rgba(0, 0, 0, 0.3) 90% , rgba(0, 0, 0, 0.05) 100%),
+    linear-gradient(45deg, rgba(0, 128, 0, 0.5) 0%, rgba(255, 255, 255, 0.5) 25%, rgba(0, 128, 0, 0.5) 50%, rgba(255, 255, 255, 0.5) 75%, rgba(0, 128, 0, 0.5) 100%);
     border-radius: 20px;
     width: 75vw;
     padding: 10px;
@@ -201,7 +220,7 @@ form {
     width: 85%;
     margin: 20px;
     padding: 20px 0px;
-    background: linear-gradient(90deg, rgba(12, 11, 11, 0.8), rgba(4, 126, 4, 0.8));
+    background: linear-gradient(90deg, rgba(12, 11, 11, 0.5), rgba(4, 126, 4, 0.5));
     animation-name: slide;
     animation-duration: 1.5s;
     animation-timing-function: ease-in;
@@ -231,19 +250,53 @@ form {
 
 .project-image:hover {
     transform: scale(1.1);
+    border-color: blanchedalmond;
 }
 
+/*Background Styling*/
+.bkg-st {
+    position: fixed;
+    z-index: -10;
+    height: 100%;
+    width: 100%;
+    opacity: 0.5;
+    background:
+    linear-gradient(135deg, #708090 21px, #d9ecff 22px, #d9ecff 24px, transparent 24px, transparent 67px, #d9ecff 67px, #d9ecff 69px, transparent 69px),
+    linear-gradient(225deg, #708090 21px, #d9ecff 22px, #d9ecff 24px, transparent 24px, transparent 67px, #d9ecff 67px, #d9ecff 69px, transparent 69px)0 64px;
+    background-color: #708090;
+    background-size: 64px 128px;
+}
+.bkg-st-1 {
+    position: fixed;
+    z-index: -15;
+    top: 0px;
+    bottom: 0px;
+    right: 0px;
+    left: 0px;
+    background: linear-gradient(transparent 0%, rgba(26, 48, 26, 0.9) 30%, rgba(26, 48, 26, 0.9) 70%, transparent 100%);
+    transform: skewY(25deg);
 
+}
+.logo {
+    width: 20px;
+    height: auto;
+}
 
-
-
-
+.logo-2 {
+    width: 100%;
+    height: auto;
+}
+.logo-3 {
+    margin-right: 20px;
+    width: 75px;
+    height: auto;
+}
 
 
 /* NAV BAR */
 #bottom-nav {
     height: 60px;
-    background: linear-gradient(rgb(3, 31, 7), rgb(250,250,250), rgb(3, 31, 7));
+    background: linear-gradient(rgb(3, 31, 7, 0.5) 0%, rgb(3, 31, 7) 10%, rgb(250,250,250) 50%, rgb(3, 31, 7)) 90%, rgb(3, 31, 7, 0.5) 100%;
     overflow: hidden;
     position: fixed;
     bottom: 0;
