--- a/style.css
+++ b/style.css
@@ -1,20 +1,53 @@
-@keyframes slide {
+@keyframes slide-l {
     0% {
         position: relative;
         left: -10%;
-        color: transparent;
-        background: transparent;
     }
     100% {
         left: 10%;
     }
+}
+@keyframes slide-r {
+    0% {
+        position: relative;
+        right: -10%;
+    }
+    100% {
+        right: 10%;
+    }
+}
+@keyframes fade-in {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+.slide-anim-l {
+    animation-name: slide-l;
+    animation-duration: 1.5s;
+    animation-timing-function: ease-in;
+    animation-iteration-count: initial;
+}
+.slide-anim-r {
+    animation-name: slide-r;
+    animation-duration: 1.5s;
+    animation-timing-function: ease-in;
+    animation-iteration-count: initial;
+}
+.fade-in {
+    animation-name: fade-in;
+    animation-duration: 1.5s;
+    animation-timing-function: ease-in;
+    animation-iteration-count: initial;
 }
 body {
     margin: 0px;
     width: 100%;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 1em;
-    background: linear-gradient(90deg, rgba(12, 11, 11), rgba(4, 126, 4));
+    /* background: linear-gradient(90deg, rgba(12, 11, 11), rgba(4, 126, 4)); */
     align-content: center;
 }
 
@@ -26,32 +59,23 @@ body {
 }
 .title {
     display: flex;
-    height: 90vh;
-    width: 75vw;
-    background: linear-gradient(-90deg, rgba(46, 53, 46, 0.5), rgba(1, 122, 1, 0.5));
+    margin: 20vh 0px;
+    padding: 40px;
+    background: linear-gradient(-90deg, rgba(36, 41, 36, 0.4), rgba(1, 122, 1, 0.4));
     border-radius: 50px;
     align-items: center;
     justify-content: center;
 }
 h1 {
-    margin: 25px;
-    font-size: 2em;
-    animation-name: slide;
-    animation-duration: 1.5s;
-    animation-timing-function: ease-in;
-    animation-iteration-count: initial;
+    font-size: 1.5em;
 }
 .Name {
     margin: 5px;
-    font-size: 2em;
+    font-size: 2.1em;
     background: linear-gradient(90deg, #033E4E, #00181E);
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
-    animation-name: slide;
-    animation-duration: 1.5s;
-    animation-timing-function: ease-in;
-    animation-iteration-count: initial;
 }
 
 /* About Me Page */
@@ -66,35 +90,60 @@ h1 {
     display: grid;
     grid-template-columns: auto auto auto;
     margin: 25px 10px;
-    animation-name: slide;
-    animation-duration: 1.5s;
-    animation-timing-function: ease-in;
-    animation-iteration-count: initial;
 }
 .profile_pic {
+    background: linear-gradient(65deg, #033E4E 0%, #00181E 100%),
+                linear-gradient(-65deg, #033E4E 0%, #00181E 100%);
+    padding: 5px;
     height: 200px;
     width: 300px;
     margin: 20px;
-    border-radius: 200px;
-    animation-name: slide;
-    animation-duration: 1.5s;
-    animation-timing-function: ease-in;
-    animation-iteration-count: initial;
+    border-radius: 20px;
 }
 .profile_about {
+    display: grid;
+    grid-template-columns: 25% auto 25%;
+    gap: 10px 5px;
+    align-items: center;
+    justify-items: center;
     margin: 25px 20px;
+    padding: 20px 20px;
+    margin-bottom: 100px;
     width: 75vw;
     background-color: rgba(0, 12, 0, 0.5);
     border-radius: 20px;
 }
 .about {
-    margin: 20px 80px;
+    background: linear-gradient(90deg, rgba(0, 24, 30, 0.6) 0%, rgba(1, 43, 54, 0.6) 100%);
+    margin: 20px 50px;
+    padding: 20px;
     color: white;
-    animation-name: slide;
-    animation-duration: 1.5s;
-    animation-timing-function: ease-in;
-    animation-iteration-count: initial;
+    font-size: 0.7em;
+    border-radius: 10PX;
 }
+.info1 {
+    grid-column: 1 / 3;
+}
+.info2 {
+    grid-column: 2 / 4;
+}
+.info3 {
+    grid-column: 1 / 3;
+}
+.info4 {
+    grid-column: 2 / 4;
+}
+
+.about-image {
+    background: linear-gradient(45deg, #033E4E 0%, #00181E 100%),
+                linear-gradient(-45deg, #033E4E 0%, #00181E 100%);
+    padding: 3px;
+    justify-self: center;
+    width: 100%;
+    height: auto;
+    border-radius: 20px;
+}
+
 
 /* Contact Page */
 
@@ -111,7 +160,6 @@ h1 {
     align-self: center;
     justify-self: center;
     font-size: 1.2em;
-    /* margin-top: 50px; */
     padding: 50px;
     width: 75vw;
     border-radius: 10px;
@@ -140,10 +188,6 @@ form {
     padding: 10px 0px;
     background-color: rgba(0, 0, 0, 0.6);
     border-radius: 10px;
-    animation-name: slide;
-    animation-duration: 1.5s;
-    animation-timing-function: ease-in;
-    animation-iteration-count: initial;
 }
 
 .reasons {
@@ -205,7 +249,7 @@ form {
     background: 
     linear-gradient(-90deg, rgba(255, 255, 255, 0.05) 0%, rgba(255, 255, 255, 0.3) 10% , rgba(128, 128, 128, 0.3) 90% , rgba(128, 128, 128, 0.05) 100%),
     linear-gradient(0deg, rgba(0, 0, 0, 0.05) 0%, rgba(0, 0, 0, 0.3) 10% , rgba(0, 0, 0, 0.3) 90% , rgba(0, 0, 0, 0.05) 100%),
-    linear-gradient(45deg, rgba(0, 128, 0, 0.5) 0%, rgba(255, 255, 255, 0.5) 25%, rgba(0, 128, 0, 0.5) 50%, rgba(255, 255, 255, 0.5) 75%, rgba(0, 128, 0, 0.5) 100%);
+    linear-gradient(45deg, rgba(0, 128, 0, 0.3) 0%, rgba(255, 255, 255, 0.3) 25%, rgba(0, 128, 0, 0.3) 50%, rgba(255, 255, 255, 0.3) 75%, rgba(0, 128, 0, 0.3) 100%);
     border-radius: 20px;
     width: 75vw;
     padding: 10px;
@@ -221,29 +265,26 @@ form {
     margin: 20px;
     padding: 20px 0px;
     background: linear-gradient(90deg, rgba(12, 11, 11, 0.5), rgba(4, 126, 4, 0.5));
-    animation-name: slide;
-    animation-duration: 1.5s;
-    animation-timing-function: ease-in;
-    animation-iteration-count: initial;
 
 }
 .project-info {
+    grid-column: 1 / 3;
     padding-left: 10px;
-    margin: 10px;
 }
 .icon {
     height: 30px;
     width: 30px;
 }
 .image-box {
+    display: grid;
     grid-column-start: 3;
     align-self: center;
 }
 .project-image {
     height: auto;
-    width: 90%;
-    margin: 10px;
+    width: 95%;
     justify-self: center;
+    align-self: center;
     border: 2px solid black;
     transition: 1s; 
 }
@@ -255,27 +296,13 @@ form {
 
 /*Background Styling*/
 .bkg-st {
+    background-image: url("images/Landscape_Image.jpg");
     position: fixed;
     z-index: -10;
     height: 100%;
     width: 100%;
-    opacity: 0.5;
-    background:
-    linear-gradient(135deg, #708090 21px, #d9ecff 22px, #d9ecff 24px, transparent 24px, transparent 67px, #d9ecff 67px, #d9ecff 69px, transparent 69px),
-    linear-gradient(225deg, #708090 21px, #d9ecff 22px, #d9ecff 24px, transparent 24px, transparent 67px, #d9ecff 67px, #d9ecff 69px, transparent 69px)0 64px;
-    background-color: #708090;
-    background-size: 64px 128px;
-}
-.bkg-st-1 {
-    position: fixed;
-    z-index: -15;
-    top: 0px;
-    bottom: 0px;
-    right: 0px;
-    left: 0px;
-    background: linear-gradient(transparent 0%, #00181E 30%, #012B36 70%, transparent 100%);
-    transform: skewY(25deg);
-
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 .logo {
     width: 20px;
@@ -283,7 +310,7 @@ form {
 }
 
 .logo-2 {
-    width: 100px;
+    width: 10vw;
     height: auto;
 }
 .logo-3 {
