--- a/style.css
+++ b/style.css
@@ -27,14 +27,23 @@
 
 @keyframes walk-cycle {
     0% {
-        left: -50%;
+        /* left: -50%; */
         background-position: 0px;
     }
     100% {
-        left: 110%;
+        /* left: 110%; */
         background-position: -8192px;
     }
 }
+@keyframes moving-cycle {
+    0% {
+        left: -50%;
+    }
+    100% {
+        left: 110%;
+    }
+}
+
 .slide-anim-l {
     animation-name: slide-l;
     animation-duration: 1.5s;
@@ -88,11 +97,17 @@ h1 {
     -webkit-text-fill-color: transparent;
 }
 
-.cougar-anim {
+.cougar-moving {
     position: fixed;
+    bottom: 50px;
     transform: scale(0.7);
     z-index: 0;
     margin: 0 auto;
+    -webkit-animation: moving-cycle 3.7s ease-in-out infinite;
+	-o-animation: moving-cycle 3.7s ease-in-out infinite;
+	animation: moving-cycle 3.7s ease-in-out infinite;
+}
+.cougar-anim {
     width: 512px;
     height: 256px;
     background: url(images/cougar-sprite-sheet.png);
