--- a/style.css
+++ b/style.css
@@ -345,6 +345,7 @@ form {
     width: 100%;
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center;
 }
 .logo {
     width: 20px;
