--- a/style.css
+++ b/style.css
@@ -253,7 +253,7 @@ form {
     border-radius: 10px;
 }
 
-@media only screen and (min-width: 700px){
+@media only screen and (orientation: landscape){
     form {
         height: 900px;
     }
