--- a/style.css
+++ b/style.css
@@ -227,12 +227,12 @@ h1 {
 }
 
 input {
-    font-size: 0.8em;
+    font-size: 0.95em;
     background-color: rgba(35, 66, 3, 0.637);
     color: cornsilk;
     border: 3px solid cornsilk;
     border-radius: 20px;
-    padding: 15px 30px;
+    padding: 20px 35px;
     width: 60%; 
 }
 
@@ -247,7 +247,7 @@ form {
     display: grid;
     height: 1600px;
     align-content: center;
-    grid-template-rows: auto 85px 85px 87px 160px 85px 70px 100px auto;
+    grid-template-rows: auto 110px 110px 112px 200px 85px 70px 100px auto;
     grid-template-columns: 100%;
     background-color: rgba(0, 0, 0, 0.6);
     border-radius: 10px;
@@ -256,6 +256,18 @@ form {
 @media only screen and (orientation: landscape){
     form {
         height: 900px;
+        grid-template-rows: auto 85px 85px 87px 160px 85px 70px 100px auto;
+    }
+    input {
+        font-size: 0.6em;
+        width: 40%;
+        padding: 10px 30px;
+    }
+    .reasons {
+        padding: 10px 30px;
+    }
+    .message {
+        height: 200px;
     }
 }
 
@@ -265,8 +277,8 @@ form {
     color: cornsilk;
     border: 3px solid cornsilk;
     border-radius: 30px;
-    padding: 15px 10px;
-    width: 60%;
+    padding: 15px 30px;
+    width: 30%;
 }
 
 .message {
@@ -276,7 +288,7 @@ form {
     color: cornsilk;
     text-align: start;
     width: 60%;
-    height: 200px;
+    height: 300px;
     padding: 15px 10px;
 }
 
