--- a/style.css
+++ b/style.css
@@ -97,6 +97,7 @@ body {
     background: linear-gradient(-90deg, rgba(255, 255, 255, 0.4), rgba(138, 138, 138, 0.4));
     border: 3px solid rgb(1, 17, 7);
     border-radius: 3px;
+    transition: 0.5s;
 }
 .vmp-bg > p {
     text-decoration: none;
@@ -105,6 +106,7 @@ body {
 }
 .vmp-bg:hover {
     background: linear-gradient(-90deg, rgba(36, 41, 36, 0.4), rgba(1, 122, 1, 0.1));
+    transform: scale(1.1, 1.1);
 }
 
 h1 {
@@ -160,6 +162,13 @@ h1 {
     margin: 20px;
     border-radius: 20px;
 }
+.profile_style {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 2em;
+}
 .resume-bg {
     text-align: center;
     text-shadow: -2px -2px rgb(1, 29, 1), 2px -2px rgb(1, 29, 1),-2px 2px rgb(1, 29, 1), 2px 2px rgb(1, 29, 1);
@@ -170,6 +179,12 @@ h1 {
     width: 200px;
     font-size: 1.5em;
     font-weight: 900;
+    transition: 0.5s;
+}
+.resume-bg:hover {
+    background: linear-gradient(-90deg, rgba(36, 41, 36, 0.4), rgba(1, 122, 1, 0.1));
+    border-color: black;
+    transform: scale(1.1, 1.1);
 }
 .resume-bg > a {
     display: block;
