--- a/style.css
+++ b/style.css
@@ -112,9 +112,12 @@ body {
 
 h1 {
     font-size: 1.7em;
+    color: blanchedalmond;
+    text-shadow: -1px -1px #000, -1px 1px #000, 1px -1px #000, 1px 1px #000;
 }
 .Name {
-    margin: 5px 5px 5px 10px;
+    text-shadow: none;
+    margin: 5px 5px 5px 0px;
     font-size: 2.0em;
     background: linear-gradient(90deg, #033E4E, #00181E);
     -webkit-background-clip: text;
@@ -410,7 +413,6 @@ form {
 
 /*Background Styling*/
 .bkg-st {
-    /* Original background-image: url("images/Landscape_Image.jpg"); */
     position: fixed;
     z-index: -10;
     height: 100%;
@@ -424,12 +426,6 @@ form {
 }
 .bkg_2 {
     background-image: url("images/Lanscape_Wilcox_Fire.JPG");
-}
-.bkg_3 {
-    background-image: url("images/Lanscape_Wilcox_Reflextion2.JPG");
-}
-.bkg_4 {
-    background-image: url("images/Lanscape_Wilcox_Reflextion.JPG");
 }
 
 .logo {
@@ -452,7 +448,7 @@ form {
 
 .bottom-nav {
     height: 80px;
-    /* background: linear-gradient(rgb(20, 20, 20, 0.8) 10%, rgb(26, 26, 26) 40%, rgb(32, 32, 32) 50%, rgb(26, 26, 26) 60%, rgb(20, 20, 20, 0.8) 90%); */
+    background: linear-gradient(rgb(20, 20, 20, 0.8) 10%, rgb(26, 26, 26) 40%, rgb(32, 32, 32) 50%, rgb(26, 26, 26) 60%, rgb(20, 20, 20, 0.8) 90%);
     overflow: hidden;
     position: fixed;
     bottom: 0px;
@@ -460,98 +456,6 @@ form {
     justify-content: center;
     align-content: center;
 }
-.nav-BG_1 {
-    background: linear-gradient(rgba(177, 223, 230, 0.9) 0%, #00181E 10%, rgb(250,250,250) 50%, #00181E 90%, rgba(177, 223, 230, 0.9) 100%);
-}
-.nav-BG_2 {
-    background: linear-gradient(45deg, rgb(0, 2, 22) 0%, rgba(65, 255, 106, 0.63) 1%, rgb(200, 255, 191) 30%, rgb(177, 175, 253) 70%, rgba(65, 84, 255, 0.63) 99%, rgb(0, 2, 22) 100%);
-}
-.nav-BG_3 {
-    background: linear-gradient(rgb(20, 20, 20, 0.8) 10%, rgb(26, 26, 26) 40%, rgb(32, 32, 32) 50%, rgb(26, 26, 26) 60%, rgb(20, 20, 20, 0.8) 90%);
-}
-.nav-BG_4 {
-    background: linear-gradient(rgba(0, 0, 0, 0.9) 10%,
-                                rgba(100, 100, 100, 0.7) 15%,
-                                rgb(30, 30, 30, 0.8) 20%,
-                                rgb(100, 100, 100, 0.7) 25%,
-                                rgb(30, 30, 30, 0.8) 30%,
-                                rgb(100, 100, 100, 0.7) 35%,
-                                rgb(26, 26, 26, 0.5) 40%,
-                                rgb(32, 32, 32, 0.5) 50%, 
-                                rgb(26, 26, 26, 0.5) 60%,
-                                rgba(100, 100, 100, 0.7) 65%,
-                                rgb(30, 30, 30, 0.8) 70%,
-                                rgb(100, 100, 100, 0.7) 75%,
-                                rgb(30, 30, 30, 0.8) 80%,
-                                rgb(100, 100, 100, 0.7) 85%,
-                                rgba(0, 0, 0, 0.9) 90%),
-                linear-gradient(-15deg, rgba(0, 0, 0) 10%,
-                                rgba(100, 100, 100) 15%,
-                                rgb(30, 30, 30) 20%,
-                                rgb(100, 100, 100) 25%,
-                                rgb(30, 30, 30) 30%,
-                                rgb(100, 100, 100) 35%,
-                                rgb(26, 26, 26) 40%,
-                                rgb(0, 0, 0) 50%, 
-                                rgb(26, 26, 26) 60%,
-                                rgba(100, 100, 100) 65%,
-                                rgb(30, 30, 30) 70%,
-                                rgb(100, 100, 100) 75%,
-                                rgb(30, 30, 30) 80%,
-                                rgb(100, 100, 100) 85%,
-                                rgba(0, 0, 0) 90%);
-}
-.nav-BG_5 {
-    background: repeating-linear-gradient(-35deg, rgba(1, 78, 5, 0.7), rgba(2, 41, 66, 0.7),rgba(11, 75, 11, 0.7)  50% );
-}
-/* BackGround Testing */
-/*
-Original
-background: linear-gradient(rgba(177, 223, 230, 0.9) 0%, #00181E 10%, rgb(250,250,250) 50%, #00181E 90%, rgba(177, 223, 230, 0.9) 100%);
-
-Green to blue Slightly Translucent
-background: linear-gradient(45deg, rgb(0, 2, 22) 0%, rgba(65, 255, 106, 0.63) 1%, rgb(200, 255, 191) 30%, rgb(177, 175, 253) 70%, rgba(65, 84, 255, 0.63) 99%, rgb(0, 2, 22) 100%);
-
-Dark Grey Slightly Transparent
-background: linear-gradient(rgb(20, 20, 20, 0.8) 10%, rgb(26, 26, 26) 40%, rgb(32, 32, 32) 50%, rgb(26, 26, 26) 60%, rgb(20, 20, 20, 0.8) 90%);
-
-Grey Stripped
-background: linear-gradient(rgba(0, 0, 0, 0.9) 10%,
-                                rgba(100, 100, 100, 0.7) 15%,
-                                rgb(30, 30, 30, 0.8) 20%,
-                                rgb(100, 100, 100, 0.7) 25%,
-                                rgb(30, 30, 30, 0.8) 30%,
-                                rgb(100, 100, 100, 0.7) 35%,
-                                rgb(26, 26, 26, 0.5) 40%,
-                                rgb(32, 32, 32, 0.5) 50%, 
-                                rgb(26, 26, 26, 0.5) 60%,
-                                rgba(100, 100, 100, 0.7) 65%,
-                                rgb(30, 30, 30, 0.8) 70%,
-                                rgb(100, 100, 100, 0.7) 75%,
-                                rgb(30, 30, 30, 0.8) 80%,
-                                rgb(100, 100, 100, 0.7) 85%,
-                                rgba(0, 0, 0, 0.9) 90%),
-                linear-gradient(-15deg, rgba(0, 0, 0) 10%,
-                                rgba(100, 100, 100) 15%,
-                                rgb(30, 30, 30) 20%,
-                                rgb(100, 100, 100) 25%,
-                                rgb(30, 30, 30) 30%,
-                                rgb(100, 100, 100) 35%,
-                                rgb(26, 26, 26) 40%,
-                                rgb(0, 0, 0) 50%, 
-                                rgb(26, 26, 26) 60%,
-                                rgba(100, 100, 100) 65%,
-                                rgb(30, 30, 30) 70%,
-                                rgb(100, 100, 100) 75%,
-                                rgb(30, 30, 30) 80%,
-                                rgb(100, 100, 100) 85%,
-                                rgba(0, 0, 0) 90%);
-
-
-Fading back and forth between blue and green 
-background: repeating-linear-gradient(-35deg, rgba(1, 78, 5, 0.7), rgba(2, 41, 66, 0.7),rgba(11, 75, 11, 0.7)  50% );
-
-*/
 #bottom-nav-links {
     display: grid;
     grid-template-columns: auto 20vw 20vw 20vw 20vw auto;
