--- a/style.css
+++ b/style.css
@@ -464,6 +464,7 @@ form {
     width: 100%;
     justify-content: center;
     align-content: center;
+    filter: opacity(100%);
 }
 #bottom-nav-links {
     display: grid;
