--- a/style.css
+++ b/style.css
@@ -73,10 +73,12 @@ body {
 /* Home Page */
 .title-box {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 .title {
+    display: grid;
     margin-top: 15vh;
     padding: 10vh 5vh 0 5vh;
     height: 200px;
@@ -104,7 +106,7 @@ body {
     border: 3px solid rgb(1, 17, 7);
     border-radius: 3px;
     display: block;
-    padding: 15px 0;
+    padding: 15px 50px;
     height: 100%;
     width: 100%;
     color: rgb(1, 17, 7);
