--- a/style.css
+++ b/style.css
@@ -213,11 +213,11 @@ h1 {
     gap: 10px 5px;
     align-items: center;
     justify-items: center;
-    margin: 25px 20px;
+    margin: 25px 0px;
     padding: 20px 20px;
     margin-bottom: 15vh;
-    width: 90vw;
-    background-color: rgba(0, 12, 0, 0.5);
+    width: 95vw;
+    /* background-color: rgba(0, 12, 0, 0.5); */
     border-radius: 20px;
 }
 .about {
@@ -229,30 +229,36 @@ h1 {
     border-radius: 10PX;
 }
 .info1 {
-    grid-column: 1 / 3;
+    grid-column: 1 / 4;
 }
 .info2 {
-    grid-column: 2 / 4;
+    grid-column: 1 / 4;
 }
 .info3 {
-    grid-column: 1 / 3;
+    grid-column: 1 / 4;
 }
 .info4 {
-    grid-column: 2 / 4;
+    grid-column: 1 / 4;
 }
+
+.ab-img-adj {
+    grid-column: 3 / 4;
+}
+
 
 .about-image {
     background: linear-gradient(45deg, #033E4E 0%, #00181E 100%),
                 linear-gradient(-45deg, #033E4E 0%, #00181E 100%);
     padding: 3px;
+    margin: 0;
     justify-self: center;
-    width: 80%;
-    height: auto;
+    width: 200px;
+    height: 200px;
     border-radius: 20px;
     transition: 1s;
 }
 .about-image:hover {
-    transform: scale(1.5);
+    transform: scale(1.1);
 }
 
 @media only screen and (orientation: landscape){
@@ -261,6 +267,21 @@ h1 {
     }
     .about{
         font-size: 0.85em;
+    }
+    .info1 {
+        grid-column: 2 / 3;
+    }
+    .info2 {
+        grid-column: 2 / 3;
+    }
+    .info3 {
+        grid-column: 2 / 3;
+    }
+    .info4 {
+        grid-column: 2 / 3;
+    }
+    .ab-img-adj {
+        grid-column: 1 / 2;
     }
 }
 
