--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ body {
 }
 @media only screen and (orientation: landscape) {
     .title {
-        margin-top: 7vh;
+        margin-top: 5vh;
     }
 }
 .title > a {
@@ -159,6 +159,7 @@ h1 {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-bottom: 150px;
 }
 .profile_header {
     display: grid;
@@ -191,7 +192,7 @@ h1 {
     font-size: 1.5em;
     font-weight: 900;
     transition: 0.5s;
-    margin-bottom: 150px;
+    /* margin-bottom: 150px; */
 }
 .resume-bg:hover {
     background: linear-gradient(-90deg, rgba(36, 41, 36, 0.4), rgba(1, 122, 1, 0.1));
@@ -222,7 +223,7 @@ h1 {
 }
 .about {
     background: linear-gradient(90deg, rgba(0, 24, 30, 0.6) 0%, rgba(1, 43, 54, 0.6) 100%);
-    margin: 20px 50px;
+    /* margin: 20px 50px; */
     padding: 20px;
     color: white;
     font-size: 0.6em;
@@ -401,28 +402,30 @@ form {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: 
+    /* background: 
     linear-gradient(-90deg, rgba(255, 255, 255, 0.05) 0%, rgba(255, 255, 255, 0.3) 10% , rgba(128, 128, 128, 0.3) 90% , rgba(128, 128, 128, 0.05) 100%),
     linear-gradient(0deg, rgba(0, 0, 0, 0.05) 0%, rgba(0, 0, 0, 0.3) 10% , rgba(0, 0, 0, 0.3) 90% , rgba(0, 0, 0, 0.05) 100%),
-    linear-gradient(45deg, rgba(0, 128, 0, 0.3) 0%, rgba(255, 255, 255, 0.3) 25%, rgba(0, 128, 0, 0.3) 50%, rgba(255, 255, 255, 0.3) 75%, rgba(0, 128, 0, 0.3) 100%);
+    linear-gradient(45deg, rgba(0, 128, 0, 0.3) 0%, rgba(255, 255, 255, 0.3) 25%, rgba(0, 128, 0, 0.3) 50%, rgba(255, 255, 255, 0.3) 75%, rgba(0, 128, 0, 0.3) 100%); */
     border-radius: 20px;
-    width: 75vw;
+    width: 100vw;
     padding: 10px;
     color: ivory;
 }
 .project {
     display: grid;
-    grid-template-columns: 25vw auto 25vw;
+    grid-template-columns: 25vw auto 40vw;
     grid-template-areas: 
     "Info . Image";
+    height: 300px;
     border-radius: 5px;
     width: 85%;
-    margin: 20px;
+    margin: 50px 0px;
     padding: 20px 0px;
     background: linear-gradient(90deg, rgba(12, 11, 11, 0.5), rgba(4, 126, 4, 0.5));
 
 }
 .project-info {
+    align-self: center;
     grid-column: 1 / 3;
     padding-left: 10px;
 }
@@ -437,7 +440,7 @@ form {
 }
 .project-image {
     height: auto;
-    width: 95%;
+    width: 85%;
     justify-self: center;
     align-self: center;
     border: 2px solid black;
