--- a/style.css
+++ b/style.css
@@ -229,16 +229,7 @@ h1 {
     font-size: 0.6em;
     border-radius: 10PX;
 }
-.info1 {
-    grid-column: 1 / 4;
-}
-.info2 {
-    grid-column: 1 / 4;
-}
-.info3 {
-    grid-column: 1 / 4;
-}
-.info4 {
+.info {
     grid-column: 1 / 4;
 }
 
@@ -269,16 +260,7 @@ h1 {
     .about{
         font-size: 0.85em;
     }
-    .info1 {
-        grid-column: 2 / 3;
-    }
-    .info2 {
-        grid-column: 2 / 3;
-    }
-    .info3 {
-        grid-column: 2 / 3;
-    }
-    .info4 {
+    .info {
         grid-column: 2 / 3;
     }
     .ab-img-adj {
@@ -402,12 +384,8 @@ form {
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* background: 
-    linear-gradient(-90deg, rgba(255, 255, 255, 0.05) 0%, rgba(255, 255, 255, 0.3) 10% , rgba(128, 128, 128, 0.3) 90% , rgba(128, 128, 128, 0.05) 100%),
-    linear-gradient(0deg, rgba(0, 0, 0, 0.05) 0%, rgba(0, 0, 0, 0.3) 10% , rgba(0, 0, 0, 0.3) 90% , rgba(0, 0, 0, 0.05) 100%),
-    linear-gradient(45deg, rgba(0, 128, 0, 0.3) 0%, rgba(255, 255, 255, 0.3) 25%, rgba(0, 128, 0, 0.3) 50%, rgba(255, 255, 255, 0.3) 75%, rgba(0, 128, 0, 0.3) 100%); */
     border-radius: 20px;
-    width: 100vw;
+    width: 95vw;
     padding: 10px;
     color: ivory;
 }
@@ -438,9 +416,13 @@ form {
     grid-column-start: 3;
     align-self: center;
 }
+.image-box > a {
+    justify-self: center;
+    width: 85%;
+}
 .project-image {
     height: auto;
-    width: 85%;
+    width: 100%;
     justify-self: center;
     align-self: center;
     border: 2px solid black;
