--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@ h1 {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-bottom: 150px;
+    margin-bottom: 200px;
 }
 .profile_header {
     display: grid;
@@ -474,6 +474,7 @@ form {
     background: linear-gradient(rgb(20, 20, 20, 0.8) 10%, rgb(26, 26, 26) 40%, rgb(32, 32, 32) 50%, rgb(26, 26, 26) 60%, rgb(20, 20, 20, 0.8) 90%);
     overflow: hidden;
     position: fixed;
+    z-index: 10;
     bottom: 0px;
     width: 100%;
     justify-content: center;
