--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@
 body {
     margin: 0px;
     width: 100%;
+    height: 100%;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 1em;
     align-content: center;
