--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@ h1 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    /* justify-content: center; */
     margin-bottom: 200px;
 }
 .profile_header {
