--- a/style.css
+++ b/style.css
@@ -65,7 +65,6 @@
 body {
     margin: 0px;
     width: 100%;
-    height: 100%;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 1em;
     align-content: center;
@@ -159,7 +158,6 @@ h1 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* justify-content: center; */
     margin-bottom: 200px;
 }
 .profile_header {
@@ -442,6 +440,10 @@ form {
     height: 100%;
     width: 100%;
     background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+
     background-repeat: no-repeat;
     background-position: center;
 }
