--- a/style.css
+++ b/style.css
@@ -436,7 +436,7 @@ form {
 /*Background Styling*/
 .bkg-st {
     display: block;
-    position: fixed;
+    /* position: fixed; */
     top: 0;
     left: 0;
     z-index: -10;
